FIX: resize imgs on mobile devices

--- a/templates/static/perfil/css/home.css
+++ b/templates/static/perfil/css/home.css
@@ -55,6 +55,13 @@
 
 }
 
+@media screen and (max-width: 768px) {
+    .icone-setas {
+      max-width: 10%;
+    }
+  }
+  
+
 .arrowred {
     transform: rotate(180deg);
 }
